fix: missing next mix btn on mobile

--- a/src/components/youtube-video/YoutubeVideo.module.scss
+++ b/src/components/youtube-video/YoutubeVideo.module.scss
@@ -168,7 +168,7 @@
     }
 
     &_bottomInfos {
-      margin-bottom: 20px;
+      margin-bottom: 70px;
     }
   }
 }
